--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,10 @@
 /* Common */
 body{
     background-color: var(--red-color);
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
-    max-width: 50rem;
+    max-width: 62.5rem;
     margin: 0 auto;
     text-align: center;
 }
@@ -44,12 +45,12 @@ h1{
 /* Form  */
 .form-box{
     display: flex;
-    align-items: center;
     padding-bottom: 1.875rem;
 }
 .col > label{
     font-size: 1.25rem;
     color: var(--red-color);
+    font-weight: bold;
 }
 .col .input{
     border: 2px solid var(--red-color);
@@ -61,3 +62,36 @@ h1{
 }
 /* ------- */
 
+/* Biglietto */
+.hidden{
+    display: none;
+}
+.show{
+    display: block;
+}
+.flex{
+    display: flex;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.col-left{
+    width: 40%;
+    background-color: lightgray;
+    text-transform: capitalize;
+    padding: 1.25rem;
+    font-weight: bold;
+}
+.col-right{
+    width: 60%;
+    padding: 0 .625rem;
+}
+#dettagli{
+    text-align: left;
+    font-weight: bolder;
+}
+th{
+    padding: .625rem .625rem;
+}
+.name {
+    padding: .625rem;
+}
